--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ ol {
   width: 80%;
   height: fit-content;
   padding: 20px;
-  background-color: #d3d3d3;
+  background-color: #fff2f2;
   border-radius: 10px;
   box-shadow: 0px 0px 20px 0px rgba(229, 229, 229, 0.3);
 }
@@ -63,9 +63,59 @@ ol {
 .repos__list {
   width: 70%;
 }
-.repos-info {
+.repos__info {
   width: 80%;
   height: fit-content;
+  margin: 10px 0 0 0;
+  background-color: #eadfdb;
+  border-radius: 10px;
+  color: #464a50;
+}
+.repos__infoList {
+  display: flex;
+  flex-direction: row;
+  margin: 10px 0 10px 0;
+}
+div .border {
+  width: 70%;
+  margin: 10px 0 10px 30%;
+  border-bottom: 1px solid black;
+}
+.repos__infoList > * {
+  display: flex;
 
-  background-color: rgb(240, 255, 250);
+  font-size: 1.3rem;
+}
+.repos__textInfo {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-left: 70px;
+}
+.repos__infoList > * {
+  align-self: flex-start;
+  margin: 0;
+}
+.repos__infoList > * > * {
+  align-self: flex-start;
+  margin: 0;
+}
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button__close {
+  all: initial;
+  margin: -10px 0 0 20px;
+  cursor: pointer;
+}
+.button__close:active {
+  scale: 0.9;
+}
+.button__close::after {
+  content: "×";
+  color: red;
+  font-size: 70px;
+  font-weight: bold;
 }
